dnsutils-manual.yml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
spec:
  containers:
    - image: tutum/dnsutils
      name: dnsutils
