fortune-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: fortune-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: fortune
