fortune-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fortune
