kubia-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kubia.example.com
      secretName: tls-secret
  rules:
    - host: kubia.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubia-nodeport
              port:
                number: 80
        - path: /fortune
          pathType: Prefix
          backend:
            service:
              name: fortune-service
              port:
                number: 80
